# chatgpt_demo

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 545bd4214399_create_tags.py  7c9f2a0bec23_create_users.py  95d758231045_update_conversation.py  a9335f39309c_create_conversations.py  cf9d2fcc1aa8_update_robot.py  e25c0f2e4605_create_group.py  ff9a03bcb7eb_create_messages.py
app/api/: __init__.py  conversations.py  deps.py  groups.py  users.py
app/core/: auth.py  config.py  containers.py  db.py  exceptions.py  logres.py
app/models/: __init__.py  base.py  conversation.py  group.py  message.py  tags.py  user.py
app/repositories/: __init__.py  base.py  conversations.py  group.py  message.py  tags.py  users.py
app/schemas/: __init__.py  base.py  conversations.py  group.py  tags.py  user.py
app/services/: __init__.py  conversations.py  group.py  openai_service.py  tags.py  users.py
app/tools/: ai_client.py
