[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.17.0",
    "bcrypt>=5.0.0",
    "dependency-injector>=4.48.2",
    "fastapi>=0.120.0",
    "fastapi-utils>=0.8.0",
    "greenlet>=3.2.4",
    "loguru>=0.7.3",
    "openai>=2.6.1",
    "orjson>=3.11.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.38.0",
]
